@@ -9,6 +9,7 @@ Fixed a bug in the ListIdTracker class where unsorted ids were not being sorted 
 Added new dataset task --dataset-write-read for creating temporary datasets.
 Added new dataset task --dataset-bounding-box for extracting bounding boxes from datasets.
 Added new dataset task --dataset-dump for reading the entire contents of a dataset.
+Command line applications now returns status codes, 0 for success, non-zero for failure.
 
 0.24
 Fixed a bug in the XML node writing code where it would write a ',' character instead of '.' as the decimal separator in some locales.
